--- a/AddDuan.html
+++ b/AddDuan.html
@@ -182,7 +182,7 @@
         // Khởi tạo dữ liệu mới
         const duLieu = {
             khuVuc: ['FPT-HCM', 'FPT-BDG', 'FPT-VTU', 'FPT-TNH', 'FPT-BPC', 'FPT-BTN', 'FPT-LAN', 'NZ-HCM', 'Intecom', 'FPT-DNI', 'Nhật Minh', 'PA VietNam', 'BPC'],
-            keHoach: ['SGx','Buiding', 'Di dời', 'Ngầm hóa', 'FTI', 'AON', 'Nâng Cấp', 'XLSC', 'Cắt chuyển', 'Metro', 'Hot', 'Thu hồi', 'Intecom', 'Bảo trì', 'Ring'],
+            keHoach: ['SGx', 'Buiding', 'Di dời', 'Ngầm hóa', 'FTI', 'AON', 'Nâng Cấp', 'XLSC', 'Cắt chuyển', 'Metro', 'Hot', 'Thu hồi', 'Intecom', 'Bảo trì', 'Ring'],
             nguoiGiaoViec: ['Giáp VV', 'Cường TV', 'Sơn VT', 'Nghi NV', 'Thạo NT', 'Cường TQ', 'Kiệt NH', 'QLVH1 (Khiêm ND)', 'QLVH2 (Quý NT)', 'QLVH2 (Thế Anh)', 'QLVH3 (Thiện LTQ)', 'QLVH3 (Nguyên DT)', 'QLVH3 (Quang P)', 'QLVH3 (Khoa NA)', 'Cường LĐ', 'Sơn ĐT', 'Vương NN', 'Nhật NH', 'Hùng NQ DNI', 'Intecom', 'Nhật Minh', 'PhatMA', 'PA VietNam', 'ThanhTNM', 'Nam NQ', 'ThanhNT DNI'],
             giamSat: ['Giám sát A', 'Giám sát B', 'Giám sát C']
         };
@@ -210,6 +210,16 @@
                 FuiToast.error("Lỗi hệ thống báo Admin để hỗ trợ.")
 
                 throw error;
+            });
+        }
+
+        function readFile(file) {
+            return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+                reader.onload = () => resolve(reader.result);
+                reader.onerror = error => reject(error);
+                reader.readAsDataURL(file);
+
             });
         }
         async function sendDataToAppSheet() {
@@ -264,8 +274,7 @@
                             "Điểm đầu": row.querySelector('[data-field="diemDau"]').value,
                             "Điểm cuối": row.querySelector('[data-field="diemCuoi"]').value,
                             "Loại cáp": row.querySelector('[data-field="loaiCap"]').value,
-                            "Dự toán": row.querySelector('[data-field="duToan"]').value,
-                            "Đội kéo": row.querySelector('[data-field="doiKeo"]').value
+                            "Dự toán": row.querySelector('[data-field="duToan"]').value
                         };
                         if (!rowData["Tuyến cáp"] || !rowData["Điểm đầu"] || !rowData["Điểm cuối"] || !rowData["Loại cáp"] || !rowData["Dự toán"]) {
                             FuiToast.info('Vui lòng điền đủ thông tin các dòng bạn đã thêm vào báo cáo giáo sát')
@@ -279,6 +288,15 @@
 
                         await apiRequest('BCGS', 'Add', { Rows: bcsgData });
                     }
+                    const file = document.getElementById('excelFile').files[0];
+                    filebase = await readFile(file);
+                    const fileData = {
+                        "Tên File": "File dự toán" + duAnData["Mã kế hoạch"] + duAnData["POP"],
+                        "Key": duAnData["Mã kế hoạch"],
+                        "File": filebase
+                    };
+                    await apiRequest('FILE', 'Add', { Rows: [fileData] });
+
 
 
                     return 'Dữ liệu đã được gửi thành công!';
