--- a/AddDuan.html
+++ b/AddDuan.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Nhập Thông Tin Kế Hoạch</title>
+    <link rel="shortcut icon" href="Logo N có bóng/Logo N.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <link rel="stylesheet" type="text/css"
