--- a/AddDuan.html
+++ b/AddDuan.html
@@ -38,23 +38,31 @@
             <div class="space-y-6">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
-                        <label for="ngayNhan" class="block text-sm font-medium text-gray-700 mb-1">Ngày nhận *</label>
+                        <label for="ngayNhan"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded text-amber-600 bg-amber-200 uppercase last:mr-0 mr-1">Ngày
+                            nhận *</label>
                         <input type="date" id="ngayNhan" name="ngayNhan" required
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
                     <div>
-                        <label for="deadline" class="block text-sm font-medium text-gray-700 mb-1">Deadline KH *</label>
+                        <label for="deadline"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded text-amber-600 bg-amber-200 uppercase last:mr-0 mr-1">Deadline
+                            KH *</label>
                         <input type="date" id="deadline" name="deadline" required
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
                     <div>
-                        <label for="maKeHoach" class="block text-sm font-medium text-gray-700 mb-1">Mã kế hoạch
+                        <label for="maKeHoach"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded text-amber-600 bg-amber-200 uppercase last:mr-0 mr-1">Mã
+                            kế hoạch
                             *</label>
                         <input type="text" id="maKeHoach" name="maKeHoach" required
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
                     <div>
-                        <label for="pop" class="block text-sm font-medium text-gray-700 mb-1">POP *</label>
+                        <label for="pop"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded text-amber-600 bg-amber-200 uppercase last:mr-0 mr-1">POP
+                            *</label>
                         <input type="text" id="pop" name="pop" required
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
@@ -62,7 +70,9 @@
                 </div>
                 <div>
                     <div>
-                        <label for="tenCongTrinh" class="block text-sm font-medium text-gray-700 mb-1">Tên công trình
+                        <label for="tenCongTrinh"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded text-amber-600 bg-amber-200 uppercase last:mr-0 mr-1">Tên
+                            công trình
                             *</label>
                         <textarea type="text" id="tenCongTrinh" name="tenCongTrinh" required
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
@@ -74,7 +84,9 @@
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
-                        <label for="khuVuc" class="block text-sm font-medium text-gray-700 mb-1">Khu vực *</label>
+                        <label for="khuVuc"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded text-amber-600 bg-amber-200 uppercase last:mr-0 mr-1">Khu
+                            vực *</label>
                         <div class="flex items-center space-x-2">
                             <select id="khuVuc" name="khuVuc" required
                                 class="flex-grow px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -87,7 +99,9 @@
                         </div>
                     </div>
                     <div>
-                        <label for="keHoach" class="block text-sm font-medium text-gray-700 mb-1">Kế hoạch *</label>
+                        <label for="keHoach"
+                            class="text-xs font-semibold inline-block py-1 px-2 uppercase rounded text-amber-600 bg-amber-200 uppercase last:mr-0 mr-1">Kế
+                            hoạch *</label>
                         <div class="flex items-center space-x-2">
                             <select id="keHoach" name="keHoach" required
                                 class="flex-grow px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -251,7 +265,8 @@
                         "Giám sát": document.getElementById('giamSat').value || '',
                         "Tổng bộ chia": (document.getElementById('tongBoChua').value) || '',
                         "Tổng số Tủ/ODF/tập điểm": (document.getElementById('tongTuODFTapDiem').value) || '',
-                        "Dự toán Core": (document.getElementById('duToanCore').value) || ''
+                        "Dự toán Core": (document.getElementById('duToanCore').value) || '',
+                        "Trạng thái dự án": "1/ Nhận Kế Hoạch"
                     };
 
 
@@ -372,10 +387,17 @@
                     <option value="144DU">144DU</option>
 
                 </optgroup>
-                <optgroup label="Cáp đồng trục">
-                    <option value="RG6">RG6</option>
-                    <option value="RG11">RG11</option>
+                <optgroup label="Cáp Mipan">
+                    <option value="04FM">04FM</option>
+                    <option value="08FM">08FM</option>
+                    <option value="12FM">12FM</option>  
+                    <option value="16FM">16FM</option>
+                    <option value="24FM">24FM</option>
                 </optgroup>
+                <optgroup label="Cáp khác">
+                    <option value="24ADSS">24ADSS</option>
+                   </optgroup>
+
             </select>
         </td>
         <td><input type="number" class="border p-1 w-full" data-field="duToan" required></td>
@@ -404,10 +426,16 @@
                 // Đọc sheet NV-DTVT
                 const sheetDTVT = workbook.Sheets['NV-DTVT'];
                 const sheetTT = workbook.Sheets['TT'];
+                const sheetNVTH = workbook.Sheets['NV-TH'];
+
                 document.getElementById('maKeHoach').value = sheetDTVT['C8']?.v || '';
                 document.getElementById('tenCongTrinh').value = sheetDTVT['A7']?.v || '';
                 document.getElementById('pop').value = sheetTT['E12']?.v || '';
                 document.getElementById('diaChiThiCong').value = sheetTT['E22']?.v || '';
+
+                document.getElementById('duToanCore').value = sheetNVTH['E18']?.v || '';
+                document.getElementById('tongTuODFTapDiem').value = sheetNVTH['H18']?.v || '';
+                document.getElementById('tongBoChua').value = (sheetNVTH['K18']?.v) / 8 || '';
 
                 // Đọc sheet NV-TM
                 const sheetTM = workbook.Sheets['NV-TM'];
