--- a/AddDuan.html
+++ b/AddDuan.html
@@ -430,6 +430,7 @@
             <select class="border p-1 w-full" data-field="loaiCap" required>
                 <option value="">Chọn loại cáp</option>
                 <optgroup label="Cáp treo">
+                     <option value="04FO">04FO</option>
                     <option value="08FO">08FO</option>
                     <option value="12FO">12FO</option>
                     <option value="16FO">16FO</option>
